--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PORT=1000
+DATABASE_PASSWORD=NAtuGNL36npTwCeN
+DATABASE=mongodb+srv://datnt218s:<PASSWORD>@cluster0.6sdar5c.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET = NodejsAipAuthentication
